// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBinaryDirectory returns CLI directory for arch "arm" 1`] = `"directory/renpy-8.2.1-sdkarm"`;

exports[`getBinaryDirectory returns CLI directory for arch "x32" 1`] = `"directory/renpy-8.2.1-sdk"`;

exports[`getBinaryDirectory returns CLI directory for arch "x64" 1`] = `"directory/renpy-8.2.1-sdk"`;

exports[`getBinaryPath when OS is "darwin" returns CLI filepath 1`] = `"directory/name.sh"`;

exports[`getBinaryPath when OS is "linux" returns CLI filepath 1`] = `"directory/name.sh"`;

exports[`getBinaryPath when OS is "win32" returns CLI filepath 1`] = `"directory/name.exe"`;

exports[`getDownloadObject when OS is "darwin" and arch is "arm" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdkarm.tar.bz2",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getDownloadObject when OS is "darwin" and arch is "x32" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdk.zip",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getDownloadObject when OS is "darwin" and arch is "x64" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdk.zip",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "arm" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdkarm.tar.bz2",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "x32" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdk.zip",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "x64" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdk.zip",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "arm" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdkarm.tar.bz2",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "x32" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdk.zip",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "x64" gets download object 1`] = `
{
  "rapt": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-rapt.zip",
  "renios": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-renios.zip",
  "sdk": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-sdk.zip",
  "web": "https://www.renpy.org/dl/8.2.1/renpy-8.2.1-web.zip",
}
`;

exports[`getLauncherDirectory returns launcher directory 1`] = `"directory/launcher"`;
